<resources>
    <string name="app_name">Courses</string>
    <string name="studentId">StudentID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="schedule">Schedule</string>
    <string name="attendance">Attendance</string>
    <string name="grades">Grades</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
