<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coursesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poller_one"
        android:textAlignment="center"
        android:text="@string/courses"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/studentIdLinearLayout"
        android:layout_below="@id/coursesText"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:weightSum="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/studentId">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:gravity="center_horizontal"
        android:layout_below="@id/studentIdLinearLayout"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            app:passwordToggleEnabled="true"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/passLinearLayout"
        android:orientation="horizontal"
        android:gravity="center_horizontal"

        android:layout_marginTop="40dp"
        android:weightSum="10"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="15sp"
            app:cornerRadius="15sp"
            android:textColor="@color/design_default_color_background"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login" />
    </LinearLayout>
</RelativeLayout>